[package]
name = "rust_daq"
version = "0.1.0"
edition = "2021"

[dependencies]
confique = { version = "0.3.0", features = ["toml"] }
crossterm = "0.28.1"
serde = { version = "1.0.219", features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.10.0", features = ["blosc-all"] }
ndarray = "0.16.1"
anyhow = "1.0.97"
libc = "0.2.171"
crossbeam-channel = "0.5.14"
clap = { version = "4.5.35", features = ["derive"] }
ratatui = "0.29.0"

[build-dependencies]
bindgen = "0.71.0"
