[package]
name = "rust_daq"
version = "0.1.0"
edition = "2021"

[dependencies]
confique = { version = "0.3.0", features = ["toml"] }
crossterm = "0.28.1"
serde = { version = "1.0.219", features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.10.0", features = ["blosc-all"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
anyhow = "1.0.97"
libc = "0.2.171"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.35", features = ["derive"] }
ratatui = "0.29.0"
rand = "0.9.1"
simplelog = "0.12.2"
log = "0.4.27"
time = "0.3.41"

[build-dependencies]
bindgen = "0.71.0"
